--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <li>Table Tennis</li>
     </ol>
     <a download
-        href="E:\WEB DEVELOPEMENT\VS CODE\HTML\personal site\AYUSH-DEV-Participant-Certificate.pdf">CERTIFICATE</a>
+        href="E:\VS CODE\HTML\personal site\AYUSH-DEV-Participant-Certificate.pdf">CERTIFICATE</a>
     <br>
     <a href="contact.html">CONTACT ME</a>
 
