--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
         <li>Reading Nobel</li>
         <li>Table Tennis</li>
     </ol>
-    <a download
-        href="E:\VS CODE\HTML\personal site\AYUSH-DEV-Participant-Certificate.pdf">CERTIFICATE</a>
+    <a href="E:\VS CODE\HTML\personal site\AYUSH-DEV-Participant-Certificate.pdf">CERTIFICATE</a>
     <br>
     <a href="contact.html">CONTACT ME</a>
 
