--- a/index.html
+++ b/index.html
@@ -3,6 +3,26 @@
 
 <head>
     <title>Ayush Portfolio</title>
+
+    <!--"style" tag is used in internal CSS-->
+    <style>
+        body{
+            background-color: #ABD9FF;
+            align-content: center;
+        }
+        h3 {
+            font-family: Cursive;
+            font-display: 10;
+        }
+        hr{
+            border-style: dotted none none; /*[second value for left & right][third value for bottom]*/
+            border-color: white;
+            border-width: thick;
+            height: 0px;
+            width: 3%;
+        }
+    </style>
+
 </head>
 
 <body>
@@ -76,11 +96,11 @@
         <tr>
             <td>HTML</td>
             <td>⭐⭐⭐⭐⭐</td>
-            
+
             <td>JAVASCRIPT</td>
             <td>⭐⭐</td>
 
-            
+
         </tr>
         <tr>
             <td>CSS</td>
